Fixed IE jumping buttons; other minor tweaks to jquery.dialogbox.js; updated demo pages

--- a/jquery.dialogbox.0.1.css
+++ b/jquery.dialogbox.0.1.css
@@ -103,7 +103,7 @@
    /*
  padding-top: 0;
 */
-    display: block;
+    display: block; overflow: hidden;
 }
 * html #dialogbox_outer input, * html #dialogbox_outer input, * html #dialogbox_message, * html #dialogbox_message_inner /*
 , * html #dialogbox_outer
